[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pwpy"
version = "0.7.0"
authors = [
    {name = "Kyle Tyo", email = "tyo.kyle98@gmail.com"}
]
description = "A collection of tools, scrapers, and api queries for Politics and War!"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["wrapper", "api"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp~=3.10.5",
    "aioresponses",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
py-modules = ["pwpy"]
